--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--title of form-->
     <div class="container">
         <header>
             <h1 id="title">Survey Form</h1>
@@ -17,6 +18,7 @@
         </header>
         <hr>
 
+        <!--begin form-->
         <form id="survey-form">
             <label id="name-label" for="name">Name</label><br>
             <input type="text" id="name" name="name" placeholder="Enter your name" required><br>
@@ -71,6 +73,7 @@
             <button type="submit" id="submit" class="submit-button">
                 Submit
             </button>
+        </form>
     </div>
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
